# django-notifications-plus

./: pyproject.toml  tox.ini
notifications_plus/: __init__.py  filters.py  models.py  pagination.py  serializers.py  viewsets.py
tests/: factories.py  settings.py  test_models.py  test_viewsets.py  urls.py
